feat[student]: add IsTA routes
